# mc-server-management-bot

./: Dockerfile  README.md  pyproject.toml
src/: main.py
src/aws_discord/: __init__.py
